# Yoga

./: .gitignore  CHANGES  CMakeLists.txt  Makefile  README.md  manual_build.sh  meson.build
pkg/: instructions.txt
pkg/fedora/: latest.spec  template.spec
subprojects/: yoga.wrap
